# reqbuild

./: .gitignore  LICENSE  README.md  pyproject.toml
reqbuild/: __init__.py  __main__.py  cli.py  resolver.py  scanner.py  writer.py
tests/: test_reqbuild.py
